// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Viewer should render the various viewers: audioviewer 1`] = `
<View
  file={
    Object {
      "_id": "audiofileid",
      "class": "audio",
      "mime": "audio/mp3",
      "name": "sample.mp3",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: imageviewer 1`] = `
<View
  file={
    Object {
      "_id": "imagefileid",
      "class": "image",
      "mime": "image/jpg",
      "name": "sample.jpg",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: markdownviewer 1`] = `
<View
  file={
    Object {
      "_id": "markdownfileid",
      "class": "text",
      "mime": "text/markdown",
      "name": "sample.md",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: noviewer 1`] = `
<View
  file={
    Object {
      "_id": "unknownfileid",
      "class": "???",
      "mime": "something/unsupported",
      "name": "sample.unsupported",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: pdfviewer 1`] = `
<View
  file={
    Object {
      "_id": "pdffileid",
      "class": "pdf",
      "mime": "application/pdf",
      "name": "sample.pdf",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: shortcutviewer 1`] = `
<View
  file={
    Object {
      "_id": "shortcutfileid",
      "class": "shortcut",
      "mime": "application/internet-shortcut",
      "name": "cozy.url",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: textviewer 1`] = `
<View
  file={
    Object {
      "_id": "textfileid",
      "class": "text",
      "mime": "text/plain",
      "name": "sample.txt",
    }
  }
  onClose={[Function]}
/>
`;

exports[`Viewer should render the various viewers: videoviewer 1`] = `
<View
  file={
    Object {
      "_id": "videofileid",
      "class": "video",
      "mime": "video/mp4",
      "name": "sample.mp4",
    }
  }
  onClose={[Function]}
/>
`;
